--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -15,11 +15,11 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install flake8 pytest
+  - name: Install dependencies
+  run: |
+    python -m pip install --upgrade pip
+    pip install -r my_python_app/requirements.txt # <--- Update this path
+    pip install flake8 pytest
 
     - name: Lint with flake8
       run: |
